# tofromxml

work/: LICENSE  ToFromXML.cabal
work/Text/XML/: ToFromXML.hs
work/Text/XML/ToFromXML/Backend/: Parsec.hs
work/test/: Example.hs  TestToFromXML.hs  compile.bat
