name:                ToFromXML
version:             0.1.0.0
synopsis:            A library for reading/writing Haskell data from/to XML
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Robert Reitmeier
maintainer:          Robert Reitmeier <robert@thinking-machines.net>
copyright:           (c) 2014 Robert Reitmeier
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.XML.ToFromXML
  -- other-modules:       
  other-extensions:    DeriveGeneric, DefaultSignatures, UndecidableInstances, ScopedTypeVariables, OverlappingInstances, TypeOperators, FlexibleContexts, FlexibleInstances
  build-depends:       base >=4.7 && <4.8, bytestring >=0.10 && <0.11, hexpat-pickle >=0.6 && <0.7, hexpat >=0.20 && <0.21, containers >=0.5 && <0.6, array >=0.5 && <0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010